pulled asset related scripts into folder

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <div id="output"></div>
 
-    <script src="audioloader.js"></script>  <!-- Added for handling audio -->
+    <script src="assets/audioloader.js"></script>  <!-- Added for handling audio -->
     <script src="ssr/ssranimation.js"></script> <!-- Added for handling animations -->
     <script src="ssr/ssr.js"></script>  <!-- Added for handling spritesheets/animations -->
-    <script src="animations.js"></script> <!-- Added to declare all animations -->
-    <script src="background.js"></script> <!-- Added for rendering background -->
+    <script src="assets/animations.js"></script> <!-- Added to declare all animations -->
+    <script src="assets/background.js"></script> <!-- Added for rendering background -->
 
     <script src="utils.js"></script>
     <script src="g_keys.js"></script>
