Wall of bricks added. Brick Animation added. Changed collision detection. Grouped initAnimator and initAudio function into 1 function.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
     <div id="output"></div>
 
-    <script src="assets/audioloader.js"></script>  <!-- Added for handling audio -->
+    <script src="assethandlers/audioloader.js"></script>  <!-- Added for handling audio -->
     <script src="ssr/ssranimation.js"></script> <!-- Added for handling animations -->
     <script src="ssr/ssr.js"></script>  <!-- Added for handling spritesheets/animations -->
-    <script src="assets/animations.js"></script> <!-- Added to declare all animations -->
-    <script src="assets/background.js"></script> <!-- Added for rendering background -->
+    <script src="assethandlers/animations.js"></script> <!-- Added to declare all animations used -->
+    <script src="assethandlers/background.js"></script> <!-- Added for rendering background -->
 
+    <script src="wall.js"></script>
     <script src="utils.js"></script>
     <script src="g_keys.js"></script>
     <script src="Paddle.js"></script>
