Background music added. Loading screen added. Loading bar added on loading screen added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<canvas id="myCanvas" width="800" height="600"
 		style="border: 1px solid black;">
 	Sorry, but your browser does not support the HTML5 canvas tag.
-	</canvas>
+    </canvas>
+    <script src="loading.js"></script>
 
     <div id="output"></div>
 
