--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     <script src="assethandlers/animations.js"></script> <!-- Added to declare all animations used -->
     <script src="assethandlers/background.js"></script> <!-- Added for rendering background -->
 
+    <script src="Paddle.js"></script>
     <script src="wall.js"></script>
     <script src="utils.js"></script>
     <script src="g_keys.js"></script>
-    <script src="Paddle.js"></script>
+    <script src="powerup.js"></script>
     <script src="g_ball.js"></script>
     <script src="g_main.js"></script>
     <script src="update.js"></script>
