actors moved into new directory

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <script src="assethandlers/animations.js"></script> <!-- Added to declare all animations used -->
     <script src="assethandlers/background.js"></script> <!-- Added for rendering background -->
 
-    <script src="Paddle.js"></script>
-    <script src="wall.js"></script>
-    <script src="utils.js"></script>
     <script src="g_keys.js"></script>
-    <script src="powerup.js"></script>
-    <script src="g_ball.js"></script>
+    <script src="utils.js"></script>
+
+    <script src="actors/Paddle.js"></script>
+    <script src="actors/wall.js"></script>
+    <script src="actors/powerup.js"></script>
+    <script src="actors/g_ball.js"></script>
+    
     <script src="g_main.js"></script>
     <script src="update.js"></script>
     <script src="render.js"></script>
