added startscreen. Player now has to press play to start

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="g_main.js"></script>
     <script src="update.js"></script>
     <script src="render.js"></script>
+    <script src="startscreen.js"></script>
     <script src="PONG.js"></script>
 
   </body>
