Missiles added to game

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="g_keys.js"></script>
     <script src="utils.js"></script>
 
+    <script src="actors/guns.js"></script>
     <script src="actors/Paddle.js"></script>
     <script src="actors/wall.js"></script>
     <script src="actors/powerup.js"></script>
