PONG.js í BREAKOUT.js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="update.js"></script>
     <script src="render.js"></script>
     <script src="startscreen.js"></script>
-    <script src="PONG.js"></script>
+    <script src="BREAKOUT.js"></script>
 
   </body>
 </html>
